ok je push sans profil academique

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,5 +1,6 @@
 {
     "COLVIS":"Visibility of columns",
-    "globaldelete":"Global suppression"
+    "globaldelete":"Global suppression",
+    "Paiement": "Payment"
 
 }
