--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -376,6 +376,7 @@
     "Paraguay": "Paraguay",
     "Password": "Mot de passe",
     "Pay :amount": "Payer :amount",
+    "Paiement": "Paiement",
     "Payment Cancelled": "Paiement annulé",
     "Payment Confirmation": "Confirmation de paiement",
     "Payment Successful": "Paiement effectué",
