--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,6 +1,7 @@
 {
     "COLVIS":"Visibility of columns",
     "globaldelete":"Global suppression",
-    "Paiement": "Payment"
+    "Paiement": "Payment",
+    "Paiement list":"Payment list"
 
 }
