--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -634,6 +634,7 @@
     "Yes, delete it!":"Oui, supprimez-le!",
     "No, cancel!":"Non, annulez!",
     "Users list":"Liste des utilisateurs",
+    "Paiement list":"Liste des paiements",
     "New User":"Nouvel utilisateur",
     "Successful deletion":"Suppression réussie",
     "User's Profile Details":"Détails du profil de l'utilisateur",
